--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -35,7 +35,7 @@
 
 
     /* color */
-    --clr-khakhi: #F5F5F5;
+    --clr-khakhi: #FAF8ED;
     --clr-darkblue: #2D3134;
     --clr-orange: #F66F4D;
     --clr-blue: #2E476B;
