--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .pad_19_34 {
-    padding: 15px 34px;
+    padding: 15px 56px 15px 34px;
 }
 
 .gap_36 {
@@ -88,27 +88,33 @@
 }
 
 
-.radious_90:hover{
+.radious_90:hover {
     animation: border_slider 3s linear infinite alternate;
 }
+
 @keyframes border_slider {
-    0%{
+    0% {
         border-radius: 90px;
     }
-    30%{
+
+    30% {
         border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
     }
-    60%{
+
+    60% {
         border-radius: 30% 70% 20% 80% / 76% 4% 96% 24%;
     }
-    90%{
+
+    90% {
         border-radius: 83% 19% 26% 43% / 30% 17% 46% 38%;
     }
-    100%{
+
+    100% {
         border-radius: 90px;
     }
 
 }
+
 .transition_border {
     transition: all 0.7s linear;
 }
@@ -152,8 +158,12 @@
     border: 1px solid var(--clr-gray);
 }
 
-.book_now:hover .paper_plane {
+/* .book_now:hover .paper_plane {
     left: 20px;
+} */
+.paper_plane {
+    top: 20px;
+    right: 35px;
 }
 
 .book_now {
@@ -213,16 +223,18 @@
 
 .social_logo:hover {
     border: 1px solid var(--clr-orange);
-   transform: translateY(-5px);
+    transform: translateY(-5px);
 }
-.social_logo{
+
+.social_logo {
     transition: all 0.2s linear;
 }
+
 .social_logo {
     border: 1px solid #5B5F62;
     border-radius: 50%;
     padding: 7px 10px 10px 9px;
-    
+
 }
 
 .p_13 {
@@ -230,15 +242,21 @@
     padding-right: 13px;
 }
 
-.slider_scale:hover{
-transform: scale(1.07);
+.slider_scale:hover {
+    transform: scale(1.07);
 }
-.slider_scale{
+
+.slider_scale {
     transition: all .3s linear;
 }
 
+.btn_book:hover .paper_plane {
+    top: -42px;
+}
 
-
+.paper_plane {
+    transition: all .5s linear;
+}
 
 
 @media (max-width:476px) {
@@ -298,6 +316,15 @@ transform: scale(1.07);
         bottom: 12px;
         left: -28px;
     }
+
+    .paper_plane {
+        top: 15px;
+        right: 20px;
+    }
+
+    .btn_book:hover .paper_plane {
+        top: -47px;
+    }
 }
 
 
@@ -318,14 +345,14 @@ transform: scale(1.07);
     }
 
     .pad_19_34 {
-        padding: 10px 15px;
+        padding: 10px 37px 10px 15px;
     }
 
 }
 
 @media (min-width:992px) {
     .pad_19_34 {
-        padding: 15px 34px;
+        padding: 15px 56px 15px 34px;
     }
 
     .gap_36 {
